--- a/build-and-push-dockerhub.yml
+++ b/build-and-push-dockerhub.yml
@@ -1,5 +1,12 @@
 name: Build And Push To Dockerhub
 
+env:
+  DOCKER_HUB_USERNAME: ${{ inputs.DOCKER_HUB_USERNAME }}
+  DOCKER_HUB_TOKEN: ${{ inputs.DOCKER_HUB_TOKEN }}
+  DOCKER_FILE_PATH: ${{ inputs.DOCKER_FILE_PATH }}
+  REPOSITORY_NAME: ${{ inputs.REPOSITORY_NAME }}
+  TAG: ${{ inputs.TAG }}
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -7,13 +14,13 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ inputs.DOCKER_HUB_USERNAME }}
-          password: ${{ inputs.DOCKER_HUB_TOKEN }}
+          username: ${{ env.DOCKER_HUB_USERNAME }}
+          password: ${{ env.DOCKER_HUB_TOKEN }}
 
       - name: Build and push docker image to DockerHub
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ${{ inputs.DOCKER_FILE_PATH }}
+          file: ${{ env.DOCKER_FILE_PATH }}
           push: true
-          tags:  ${{ inputs.DOCKER_HUB_USERNAME }}/${{ inputs.REPOSITORY_NAME }}:${{ inputs.TAG }}
+          tags:  ${{ env.DOCKER_HUB_USERNAME }}/${{ env.REPOSITORY_NAME }}:${{ env.TAG }}
