--- a/build-and-push-dockerhub.yml
+++ b/build-and-push-dockerhub.yml
@@ -1,8 +1,10 @@
 name: Build And Push To Dockerhub
 
 env:
-  DOCKER_HUB_USERNAME: ${{ inputs.DOCKER_HUB_USERNAME }}
-  DOCKER_HUB_TOKEN: ${{ inputs.DOCKER_HUB_TOKEN }}
+  REGISTRY: ${{ inputs.REGISTRY }}
+  REGISTRY_USERNAME: ${{ inputs.REGISTRY_USERNAME }}
+  REGISTRY_PASSWORD: ${{ inputs.REGISTRY_PASSWORD }}
+  USERNAME: ${{ inputs.USERNAME }}
   DOCKER_FILE_PATH: ${{ inputs.DOCKER_FILE_PATH }}
   REPOSITORY_NAME: ${{ inputs.REPOSITORY_NAME }}
   TAG: ${{ inputs.TAG }}
@@ -14,8 +16,9 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ env.DOCKER_HUB_USERNAME }}
-          password: ${{ env.DOCKER_HUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.REGISTRY_USERNAME }}
+          password: ${{ env.REGISTRY_PASSWORD }}
 
       - name: Build and push docker image to DockerHub
         uses: docker/build-push-action@v5
@@ -23,4 +26,4 @@ jobs:
           context: .
           file: ${{ env.DOCKER_FILE_PATH }}
           push: true
-          tags:  ${{ env.DOCKER_HUB_USERNAME }}/${{ env.REPOSITORY_NAME }}:${{ env.TAG }}
+          tags:  ${{ env.USERNAME }}/${{ env.REPOSITORY_NAME }}:${{ env.TAG }}
